@@ -177,12 +177,8 @@ Disassembly of section \.text:
 [ 0-9a-f]+:	3c020123 	lui	v0,0x123
 [ 0-9a-f]+:	00441021 	addu	v0,v0,a0
 [ 0-9a-f]+:	8c424567 	lw	v0,17767\(v0\)
-[ 0-9a-f]+:	24020000 	li	v0,0
-[ 0-9a-f]+:	00441021 	addu	v0,v0,a0
-[ 0-9a-f]+:	8c420000 	lw	v0,0\(v0\)
-[ 0-9a-f]+:	24020000 	li	v0,0
-[ 0-9a-f]+:	00441021 	addu	v0,v0,a0
-[ 0-9a-f]+:	8c42ffff 	lw	v0,-1\(v0\)
+[ 0-9a-f]+:	8c820000 	lw	v0,0\(a0\)
+[ 0-9a-f]+:	8c82ffff 	lw	v0,-1\(a0\)
 [ 0-9a-f]+:	3c02abce 	lui	v0,0xabce
 [ 0-9a-f]+:	00441021 	addu	v0,v0,a0
 [ 0-9a-f]+:	8c42ef01 	lw	v0,-4351\(v0\)
@@ -205,10 +201,8 @@ Disassembly of section \.text:
 [ 0-9a-f]+:	8c42ffff 	lw	v0,-1\(v0\)
 [ 0-9a-f]+:	3c020123 	lui	v0,0x123
 [ 0-9a-f]+:	8c424567 	lw	v0,17767\(v0\)
-[ 0-9a-f]+:	24020000 	li	v0,0
-[ 0-9a-f]+:	8c420000 	lw	v0,0\(v0\)
-[ 0-9a-f]+:	24020000 	li	v0,0
-[ 0-9a-f]+:	8c42ffff 	lw	v0,-1\(v0\)
+[ 0-9a-f]+:	8c020000 	lw	v0,0\(zero\)
+[ 0-9a-f]+:	8c02ffff 	lw	v0,-1\(zero\)
 [ 0-9a-f]+:	3c02abce 	lui	v0,0xabce
 [ 0-9a-f]+:	8c42ef01 	lw	v0,-4351\(v0\)
 [ 0-9a-f]+:	3c028000 	lui	v0,0x8000
@@ -232,12 +226,8 @@ Disassembly of section \.text:
 [ 0-9a-f]+:	3c010123 	lui	at,0x123
 [ 0-9a-f]+:	00240821 	addu	at,at,a0
 [ 0-9a-f]+:	ac224567 	sw	v0,17767\(at\)
-[ 0-9a-f]+:	24010000 	li	at,0
-[ 0-9a-f]+:	00240821 	addu	at,at,a0
-[ 0-9a-f]+:	ac220000 	sw	v0,0\(at\)
-[ 0-9a-f]+:	24010000 	li	at,0
-[ 0-9a-f]+:	00240821 	addu	at,at,a0
-[ 0-9a-f]+:	ac22ffff 	sw	v0,-1\(at\)
+[ 0-9a-f]+:	ac820000 	sw	v0,0\(a0\)
+[ 0-9a-f]+:	ac82ffff 	sw	v0,-1\(a0\)
 [ 0-9a-f]+:	3c01abce 	lui	at,0xabce
 [ 0-9a-f]+:	00240821 	addu	at,at,a0
 [ 0-9a-f]+:	ac22ef01 	sw	v0,-4351\(at\)
@@ -260,10 +250,8 @@ Disassembly of section \.text:
 [ 0-9a-f]+:	ac22ffff 	sw	v0,-1\(at\)
 [ 0-9a-f]+:	3c010123 	lui	at,0x123
 [ 0-9a-f]+:	ac224567 	sw	v0,17767\(at\)
-[ 0-9a-f]+:	24010000 	li	at,0
-[ 0-9a-f]+:	ac220000 	sw	v0,0\(at\)
-[ 0-9a-f]+:	24010000 	li	at,0
-[ 0-9a-f]+:	ac22ffff 	sw	v0,-1\(at\)
+[ 0-9a-f]+:	ac020000 	sw	v0,0\(zero\)
+[ 0-9a-f]+:	ac02ffff 	sw	v0,-1\(zero\)
 [ 0-9a-f]+:	3c01abce 	lui	at,0xabce
 [ 0-9a-f]+:	ac22ef01 	sw	v0,-4351\(at\)
 [ 0-9a-f]+:	3c018000 	lui	at,0x8000
