@@ -1,5 +1,13 @@
 2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>
 
+	* gas/mips/ldstla-32.d: Update according to a 16-bit constant
+	offset optimization.
+	* gas/mips/ldstla-32-mips3.d: Likewise.
+	* gas/mips/ldstla-32-shared.d: Likewise.
+	* gas/mips/ldstla-32-mips3-shared.d: Likewise.
+
+2010-12-09  Maciej W. Rozycki  <macro@codesourcery.com>
+
 	* gas/mips/at-2.l: Adjust according to message capitalization
 	fixes.
 	* gas/mips/illegal.l: Likewise.
